# AegisCore

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/core/: Event.cpp  Event.h  EventBase.h  EventId.h
src/engine/: EventDispatcher.h
src/queue/: EventQueue.h
tests/: CMakeLists.txt  test_dispatcher.cpp  test_event.cpp  test_queue.cpp
